# smirk

./: Cargo.toml  LICENSE  run.sh
src/: main.rs  smirk.rs
src/core/: command.rs  mod.rs  record.rs  smirk_map.rs  smirk_messages.rs  smirk_search_mode.rs  trie.rs
src/lib/: command.rs  command_error.rs  smirk_map.rs  smirk_search_mode.rs
src/server/: main.rs  mod.rs  smirk_config.rs
