[package]
name = "smirk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
cargo-watch = "8.4.0"

[dependencies]
glob = "0.3.1"
num_cpus = "1.16.0"
regex = "1.9.1"

[[bin]]
name = "smirk-server"
path = "src/server/main.rs"

[[bin]]
name = "smirk-client"
path = "src/client/main.rs"
